--- a/front-vue-relay/index.html
+++ b/front-vue-relay/index.html
@@ -8,7 +8,7 @@
   <title>Vite App</title>
 </head>
 
-<body style="background-color: #2c3e50;">
+<body style="background-color: #1C1B20;">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
